# lipyds

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  deploy.yaml
devtools/: README.md
devtools/conda-envs/: env.yml  test_env.yaml
docs/: Makefile  README.md  api.rst  apl.rst  conf.py  dei.rst  flipflop.rst  getting_started.rst  grouping.rst  index.rst  leafletfinder.rst  make.bat  references.rst  requirements.yaml
docs/examples/: assign_bilayer.ipynb
lipyds/: __init__.py  _version.py
lipyds/analysis/: __init__.py  apl.py  base.py  chain.py  contacts.py  dei.py  distance.py  flipflop.py  leaflets.py  surface.py  thickness.py  tilt.py
lipyds/analysis/legacy/: __init__.py  curvature.py  dei.py  distance.py  flipflop.py  surface.py
lipyds/core/: base.py  groups.py  surface.py  topologyattrs.py
lipyds/data/: lipid_classes.py
lipyds/leafletfinder/: grouping.py  leafletfinder.py  utils.py
lipyds/leafletfinder_old/: leafletfinder.py
lipyds/lib/: __init__.py  cutils.c  cutils.cpp  cutils.html  cutils.pyx  mdautils.py  old_cutils.pyx  pvutils.py  utils.py
lipyds/tests/: datafiles.py  test_apl.py  test_contacts.py  test_dei.py  test_flipflop.py  test_leafletfinder.py  test_leafletfinder_legacy.py  test_surface.py
lipyds/utils/: guessing.py
mdkit_leaflets/: __init__.py  _version.py  leaflets.py
mdkit_leaflets/tests/: test_mdkit_leaflets.py
mdkleaflets/: __init__.py
mdkleaflets/analysis/: base.py
mdkleaflets/leafletfinder/: leaflets.py
mdkleaflets/tests/: datafiles.py  test_leafletfinder.py
(+9 files in other folders)
